# scgeo

./: .gitignore  AGENDA.md  README.md  api_manifest.json  environment.yml  pyproject.toml  pytest.ini  scgeo_io_manifest.json  scgeo_io_raw.json
docs/: ANALYSIS_LAYERS.md  COMPANION_NOTEBOOKS.md  OVERVIEW.md  QUICKSTART.md  REPRODUCIBILITY.md  RESULT_INTERPRETATION.md  api_reference.md
notebooks/: 05_OOD.ipynb  Scanpy_functions_v03262021.ipynb  Velocity_shift_alignment.ipynb  pbmc3k_ingest_scgeo_demo.ipynb  pbmc3k_ingest_scgeo_demo.py  pbmc_ingest_scgeo_demo_fixed.ipynb  scvelo_velocitybasics_scgeo_demo_fixed.ipynb
scgeo/: __init__.py  _utils.py
scripts/: check_notebooks_all.py  check_notebooks_api.py  check_notebooks_syntax.py  check_scgeo_notebooks.py  check_scgeo_notebooks_io.py  check_scgeo_runtime.py  dump_api_manifest.py  gen_api_docs.py  gen_scgeo_io_manifest.py  gen_scgeo_io_manifest_v2.py  inspect_gse280305.py  loom_to_h5ad_gse280305.py  normalize_io_manifest.py  rebuild_manifests.py  validate_benchmark_protocol.py  validate_manifests.py
tests/: test_align_vectors.py  test_align_vectors_by_shift.py  test_alignment_panel.py  test_ambiguity_panel.py  test_bench_simulation.py  test_census_knn_edges.py  test_consensus_panel.py  test_consensus_subspace.py  test_density_overlap.py  test_density_overlap_plot.py  test_distribution_report.py  test_distribution_test.py  test_distribution_test_volcano.py  test_embedding_density.py  test_highlight_topk_cells.py  test_install_import.py  test_local_geometry_stability.py  test_map_knn.py  test_map_query_to_ref.py  (+19 more)
(+450 files in other folders)
