[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "scgeo"
version = "0.1.0-dev"
description = "Geometric analysis of single-cell representations"
authors = [{name = "YuChen Liu"}]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.9"

dependencies = [
    "numpy",
    "pandas",
    "anndata",
]

[project.optional-dependencies]
dev = ["pytest", "ruff"]
plot = ["matplotlib"]
scanpy = ["scanpy"]
sklearn = ["scikit-learn"]

[tool.setuptools]
packages = ["scgeo"]
